flux/monitoring/loki/cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: loki
spec:
  endpointSelector:
    matchLabels:
      app: loki
  ingress:
  - fromCIDR:
    - 46.8.229.93/32
    toPorts:
    - ports:
      - port: "3100"
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        app: grafana
    toPorts:
    - ports:
      - port: "3100"
        protocol: TCP
  egress:
  - toEndpoints:
    - matchLabels:
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: ANY
  - toEndpoints:
    - matchLabels:
        app: rustfs
    toPorts:
    - ports:
      - port: "9000"
        protocol: TCP
